[package]
name = "osmanthus"
version = "0.0.3"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Find And Automatically Format Time Text From The String"
authors = ["ziiyoo"]
repository = "https://github.com/ziiyoo/osmanthus"
keywords = ["format", "time", "format_time", "time_format", "time_text"]
categories = ["date-and-time", "value-formatting", "parsing"]
documentation = "https://osmanthus.open.source.seaxii.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
once_cell = "1.18.0"
serde = "1.0.188"
serde_json = "1.0.105"
regex = "1.9.3"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false